add c abi statement bindings; make abi db snapshots retainable values
squashed changes:
- Add C ABI statement bindings (245405a)
- update readme (9e535ee)
- Add C ABI nested value traversal (cc5edbe)
- Add Python C ABI adapter (c360e98)
- Add ABI collection statement bindings (730a4ed)
- Add Rust C ABI smoke wrapper (ca2a53b)
- Add JVM EDN ABI smoke wrappers (a7d0675)
- Add Clojure query API wrapper (d5fe01e)
- Align Clojure API with Datomic shape (7cdf308)
- Make ABI DB snapshots retainable values (6ea0db2)